Creates new LinkedIn profile when crawler finishes running and also saves in flat file

--- a/app/views/datasets/show.html.erb
+++ b/app/views/datasets/show.html.erb
@@ -1,9 +1,1 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Name:</strong>
-  <%= @dataset.name %>
-</p>
-
-<%= link_to 'Edit', edit_dataset_path(@dataset) %> |
-<%= link_to 'Back', datasets_path %>
+<%= @print_data %>
