--- a/app/views/datasets/new.html.erb
+++ b/app/views/datasets/new.html.erb
@@ -1,5 +1,9 @@
-<h1>New Dataset</h1>
+<div class="wrapper">
 
-<%= render 'form' %>
+  <div class="app-title">
+    <h1><span>Step 2</span> Collector details &amp; terms</h1>
+  </div>
 
-<%= link_to 'Back', datasets_path %>
+  <%= render 'form' %>
+
+</div>
