--- a/app/views/datasets/_form.html.erb
+++ b/app/views/datasets/_form.html.erb
@@ -1,13 +1,27 @@
 <%= form_for(@dataset) do |f| %>
-  <%= f.label :name %><br />
-  <%= f.text_field :name %><br /><br /><br />
+<div class="app-sidebars">
+  <div class="app-sidebars-small">
+    <h2>Details</h2>
+    <p>Selected sources</p>
+    <%= f.label :name %><br />
+    <%= f.text_field :name %>
+    <hr>
 
-  <% 2.times do |count| %>
-    <%= render 'query_fields', count: count %>
-  <% end %>
-  
-  <%= hidden_field_tag 'source', params[:source] %>
-  <div class="actions">
-    <%= f.submit %>
+    <a href="<%= datasets_path %>" class="button">Cancel & Start Again</a>
+
   </div>
+
+  <div class="app-sidebars-large">
+    <h2>Enter Terms</h2>
+    <p>Single terms or multiple are allowed and will be crawled as single queries</p>
+
+    <% 2.times do |count| %>
+      <%= render 'query_fields', count: count %>
+    <% end %>
+
+    <%= hidden_field_tag 'source', params[:source] %>
+    <%= f.submit %>
+
+  </div>
+</div>
 <% end %>
