--- a/app/views/datasets/_query_fields.html.erb
+++ b/app/views/datasets/_query_fields.html.erb
@@ -1,4 +1,6 @@
 <% @input.each do |field| %>
+
   <%= label_tag field[0].to_sym %><br />
-  <%= text_field_tag "input_query_fields[#{count}][#{field[0]}]" %><br /><br />
+  <%= text_field_tag "input_query_fields[#{count}][#{field[0]}]" %>
+
 <% end %>
