applied styles to HTML & updated CSS

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,17 +16,19 @@
         <i class="icon-harvester"></i> Harvester
       </a>
       <a href="javascript:void(0)" class="navigation-menu-button" id="js-mobile-menu">MENU</a>
+      <!--
       <div class="navigation-tools">
         <div class="dropdown">
           <div class="dropdown-container">
             <p class="dropdown-button">Click to Select</p>
             <ul class="dropdown-menu dropdown-select">
-              <li><a href="#">Existing Collections</a></li>
-              <li><a href="#">New Collection</a></li>
+              <li><a href="/collections/">Existing Collections</a></li>
+              <li><a href="/">New Collection</a></li>
             </ul>
           </div>
         </div>
       </div>
+      -->
     </div>
   </header>
 
