--- a/app/views/datasets/_form.html.erb
+++ b/app/views/datasets/_form.html.erb
@@ -2,25 +2,30 @@
 <div class="app-sidebars">
   <div class="app-sidebars-small">
     <h2>Details</h2>
-    <p>Selected sources</p>
-    <%= f.label :name %><br />
+    <p>Selected Sources</p>
+    <ul class="list-items">
+      <li><i class="<%= @crawler["icon"] %>"></i> <%= @crawler["name"] %></li>
+    </ul>
+
+    <%= f.label :name %>
     <%= f.text_field :name %>
     <hr>
-
-    <a href="<%= datasets_path %>" class="button">Cancel & Start Again</a>
-
+    <a class="button text button-full" href="<%= datasets_path %>" class="button">Cancel & Start Again</a>
   </div>
 
   <div class="app-sidebars-large">
     <h2>Enter Terms</h2>
     <p>Single terms or multiple are allowed and will be crawled as single queries</p>
-
-    <% 2.times do |count| %>
-      <%= render 'query_fields', count: count %>
-    <% end %>
-
+    <ol class="unstyled">
+      <% 2.times do |count| %>
+      <li>
+        <%= render 'query_fields', count: count %>
+        <hr>
+      </li>
+      <% end %>
+    </ol>
     <%= hidden_field_tag 'source', params[:source] %>
-    <%= f.submit %>
+    <input class="button-full" type="submit" name="commit" value="Create Dataset">
 
   </div>
 </div>
