changes to Controller, Routes, and Views for #4 #6

--- a/app/views/datasets/show.html.erb
+++ b/app/views/datasets/show.html.erb
@@ -1,1 +1,10 @@
-<%= @print_data %>
+<div class="wrapper">
+  <div class="app-title">
+    <h1><span>Dataset:</span> Drones</h1>
+    <a href="#"><i class="icon-modified"></i> Edit</a>
+  </div>
+</div>
+
+<div class="wrapper">
+  <%= @print_data %>
+</div>
