Fixed issue with saving input_query_fields

--- a/app/views/datasets/index.html.erb
+++ b/app/views/datasets/index.html.erb
@@ -10,7 +10,7 @@
     <a href="/datasources/"><i class="icon-plus"></i> New Dataset</a>
   </div>
   <% @datasets.each do |dataset| %>
-
+  <% get_count(dataset) %>
     <h3><%= dataset.name %></h3>
 
     View:
